[project]
name = "comfyui-save-vpred"
description = "Simple ComfyUI Custom Node to enable saving checkpoints with V-Pred ZTSNR tensors and metadata."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Miyuutsu/comfyui-save-vpred"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-save-vpred"
Icon = ""
